web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-arrow-parameter-name/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,16)
1|"use strict"; (yield) => 42
 |              ^
[SyntaxError]: unexpect keyword in strict mode (1,16)
1|"use strict"; (yield) => 42
 |              ^
[SyntaxError]: unexpect keyword in strict mode (1,16)
1|"use strict"; (yield) => 42
 |              ^
